--- a/miniprogram/pages/collect/index.wxml
+++ b/miniprogram/pages/collect/index.wxml
@@ -114,8 +114,8 @@
           <text class="key">是否大学生入伍</text>
           <view class="flex-1" />
           <view class='value'>
-            <text class="sex-man {{collegeIndex == 0 ? 'active' : ''}}" bindtap="selectedCollegeListener" data-type='0'>是</text>
             <text class="sex-woman' {{collegeIndex == 1 ? 'active' : ''}}" bindtap="selectedCollegeListener" data-type='1'>否</text>
+            <text class="sex-man {{collegeIndex == 0 ? 'active' : ''}}" bindtap="selectedCollegeListener" data-type='0'>是</text>
           </view>
           <view class="img-arrow" />
         </view>
@@ -218,6 +218,42 @@
           <image class="img-arrow" src="../../images/icon_task_arrow.png" mode="widthFix" />
         </view>
         <view class="line" />
+        <view class="item-layout">
+          <view class="mark" />
+          <text class="key">是否有学历提升需求</text>
+          <view class="flex-1" />
+          <picker class="value" bindchange="bindEducationUpChange" value="{{educationUps[educationUpIndex]}}" range="{{educationUps}}">
+            <view class="picker">
+              {{educationUps[educationUpIndex]}}
+            </view>
+          </picker>
+          <image class="img-arrow" src="../../images/icon_task_arrow.png" mode="widthFix" />
+        </view>
+        <view class="line" />
+        <view class="item-layout">
+          <view class="mark" />
+          <text class="key">是否有技能培训需求</text>
+          <view class="flex-1" />
+          <picker class="value" bindchange="bindSkillChange" value="{{skills[skillIndex]}}" range="{{skills}}">
+            <view class="picker">
+              {{skills[skillIndex]}}
+            </view>
+          </picker>
+          <image class="img-arrow" src="../../images/icon_task_arrow.png" mode="widthFix" />
+        </view>
+        <view class="line" />
+        <view class="item-layout">
+          <view class="mark" />
+          <text class="key">是否有创业需求</text>
+          <view class="flex-1" />
+          <picker class="value" bindchange="bindEntrepreneurshipChange" value="{{entrepreneurships[entrepreneurshipIndex]}}" range="{{entrepreneurships}}">
+            <view class="picker">
+              {{entrepreneurships[entrepreneurshipIndex]}}
+            </view>
+          </picker>
+          <image class="img-arrow" src="../../images/icon_task_arrow.png" mode="widthFix" />
+        </view>
+        <view class="line" />
       </view>
 
       <view class="btn-submit bg-main" catchtap="onSubmit">提 交</view>
@@ -229,34 +265,4 @@
   <area-picker show="{{isShowArmyAddressDialog}}" bind:sureSelectArea="selectArmyAddressListener"></area-picker>
   <area-picker show="{{isShowLiveAddressDialog}}" bind:sureSelectArea="selectLiveAddressListener"></area-picker>
   <area-picker show="{{isShowWorkCityDialog}}" isShowArea="{{false}}" bind:sureSelectArea="selectWorkCityListener"></area-picker>
-
-  <!-- <popup show="{{ isShowUserInfoDialog }}" position="center">
-    <view class="popup-user-layout">
-      <view class="title">信息核对</view>
-      <view class="content">
-        <view class="tableView">
-          <view class="table_cell">
-            <view class="td td5">姓名</view>
-            <view class="td td3">{{userInfo.xingming}}</view>
-          </view>
-          <view class="table_cell">
-            <view class="td td5">性别</view>
-            <view class="td td3">{{userInfo.xingbie}}</view>
-          </view>
-          <view class="table_cell">
-            <view class="td td5">手机</view>
-            <view class="td td3">{{userInfo.shouji}}</view>
-          </view>
-          <view class="table_cell">
-            <view class="td td5">微信</view>
-            <view class="td td3">{{userInfo.weixin}}</view>
-          </view>
-          <view class="table_cell">
-            <view class="td td5">QQ</view>
-            <view class="td td3">{{userInfo.qq}}</view>
-          </view>
-        </view>
-      </view>
-    </view>
-  </popup> -->
 </view>
